--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.adjust-gameover-and-canvas-dimensions {
+.positioning-and-dimensions {
     width: 70%;
     height: 50vh;
     margin: 2% 15%;
@@ -10,6 +10,8 @@ canvas {
     display: block;
 }
 
+
+#game-interface,
 #gameover {
     justify-content: center;
     align-items: center;
@@ -18,8 +20,9 @@ canvas {
 
 }
 
-#youwon,
-#youlost {
+#gstart-img,
+#uwon-img,
+#gover-img {
     width: 100%;
     height: 100%;
     max-width: 500px;
@@ -28,6 +31,7 @@ canvas {
     display: none;
 }
 
+#play-now,
 #playagain {
     position: absolute;
     top: 27vh;
